fix: closes #11 allowing text to wrap again in the thread content

--- a/views/css/tw-out.css
+++ b/views/css/tw-out.css
@@ -979,6 +979,10 @@ html {
   white-space: pre;
 }
 
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
+
 .break-words {
   overflow-wrap: break-word;
 }
